<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".AddFragment"
    android:layout_width="match_parent" android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/list_item_cocktail_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/editText"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/pink_salmon" />

    <EditText
        android:id="@+id/editTextLama"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/list_item_cocktail_edit_text"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editTextLama"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/pink_salmon" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLama"
        android:layout_centerHorizontal="true"
        android:max="5"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar1"
        android:layout_centerHorizontal="true"
        android:text="@string/enter" />


    <Button
        android:id="@+id/deleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="48dp"
        android:text="@string/deleteAllDBButton" />

    <Button
        android:id="@+id/printCocktails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/printCocktails"
        android:layout_alignTop="@+id/deleteAll"
        android:layout_alignRight="@+id/ratingBar1"
        android:layout_alignEnd="@+id/ratingBar1" />

</RelativeLayout>
