<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextCocktail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/editText"
        android:padding="25.7dp"
        android:singleLine="true"
        android:textColor="@color/pink_salmon" />

    <EditText
        android:id="@+id/editTextLama"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextCocktail"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/editTextLama"
        android:padding="25.7dp"
        android:singleLine="true"
        android:textColor="@color/pink_salmon" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLama"
        android:layout_centerHorizontal="true"
        android:max="5"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar1"
        android:layout_centerHorizontal="true"
        android:onClick="EnterInputs"
        android:text="@string/enter" />


    <Button
        android:id="@+id/deleteAllDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="43dp"
        android:layout_marginLeft="23dp"
        android:text="@string/deleteAllDBButton" />

    <Button
        android:id="@+id/saveToDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deleteAllDB"
        android:layout_alignBottom="@+id/deleteAllDB"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/deleteAllDB"
        android:text="@string/saveButton" />



</RelativeLayout>
